--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fast-levenshtein": "^3.0.0"
   },
   "devDependencies": {
+    "@types/fast-levenshtein": "^0.0.4",
     "@types/node": "^24.6.2",
     "typescript": "^5.9.3"
   }
